plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.9'
  id 'com.github.johnrengelman.shadow' version '7.1.2'
  id 'maven-publish'
}

sourceCompatibility = 19
targetCompatibility = 19

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    google()
}

javafx {
    version = "19"
    modules = [ 'javafx.controls' ]
}

jar {
    manifest {
        attributes 'Main-Class': "${project.main}"
    }
}

application {
    mainClass = "${project.main}"
}

configurations {
    shadow.extendsFrom(runtimeClasspath)
}

shadowJar {
    archiveClassifier.set('fat')
}

//compileJava {
//    options.compilerArgs += ['--enable-preview']
//}
//
//tasks.withType(JavaExec) {
//    jvmArgs += '--enable-preview'
//}

dependencies {
    implementation("commons-io:commons-io:${project.commonsio_version}")
    implementation("org.slf4j:slf4j-log4j12:${project.slf4j_version}")
    implementation("com.google.code.gson:gson:${project.gson_version}")
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}"}
    }
}

tasks.withType(JavaCompile).configureEach {
    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
    it.options.release = 19
}
